# autoresearch-by-harsh-vardhan

./: .gitignore  CONTRIBUTING.md  README.md  autoresearch-reference.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml  test.yml
benchmarks/: hndsr_vr_registry.json  nlp_lm_registry.json  tabular_cls_registry.json
configs/hndsr_vr/: base.yaml  vR.1_control.yaml  vR.1_smoke.yaml  vR.1_train.yaml
configs/nlp_lm/: base.yaml  v1.0_control.yaml  v1.0_smoke.yaml  v1.0_train.yaml
configs/tabular_cls/: base.yaml  v1.0_control.yaml  v1.0_smoke.yaml  v1.0_train.yaml  v2.0_control.yaml  v2.0_smoke.yaml  v2.0_train.yaml
data/: tiny_shakespeare.txt
docs/: Autonomous ML Project Pipeline Design.md  Autoresearch Concept and Analogues.md  Chakra GitHub + PyPI Release Hardening Plan PLAN.md  audit_2026-04-02.md  audit_2026-04-04.md  chakra_cycle.md  concept_vs_reality_audit.md  contributing.md  how_to_use.md  index.md  notebook_workflow.md  publishing_to_pypi.md  quickstart.md
docs/cli/: commands.md  execution.md  index.md  troubleshooting.md
docs/notebooks/: v1.0_NLP_LM.md  v1.0_Tabular_CLS.md  v2.0_Tabular_CLS.md  vR.1_HNDSR.md
docs/stylesheets/: extra.css
notebooks/versions/: README.md  kernel-metadata.json  v1.0_NLP_LM.ipynb  v1.0_Tabular_CLS.ipynb  v2.0_Tabular_CLS.ipynb  vR.1_HNDSR.ipynb
programs/: hndsr_vr.md  nlp_lm.md  tabular_cls.md
reports/reviews/: v1.0_NLP_LM.review.json  v1.0_NLP_LM.review.md  v1.0_Tabular_CLS.review.json  v1.0_Tabular_CLS.review.md  v2.0_Tabular_CLS.review.json  v2.0_Tabular_CLS.review.md  vR.1_HNDSR.review.json  vR.1_HNDSR.review.md  vR.9_HNDSR.review.json  vR.9_HNDSR.review.md
src/autoresearch_hv/: __init__.py  cli.py
src/autoresearch_hv/core/: __init__.py  lifecycle.py  utils.py
src/autoresearch_hv/domains/: __init__.py
src/autoresearch_hv/domains/hndsr_vr/: domain.yaml  evaluate_runner.py  export_samples.py  lifecycle.py  notebook_contract.py  train_runner.py
src/autoresearch_hv/domains/nlp_lm/: domain.yaml  evaluate_runner.py  lifecycle.py  models.py  train_runner.py  utils.py
src/autoresearch_hv/domains/tabular_cls/: dataset.py  domain.yaml  evaluate_runner.py  lifecycle.py  metrics.py  train_runner.py
src/autoresearch_hv/hndsr_vr/: __init__.py  dataset.py  evaluate_runner.py  export_samples.py  lifecycle.py  metrics.py  models.py  notebook_contract.py  tracker.py  train_runner.py  utils.py
src/chakra/: __init__.py  chakra_cli.py  cli.py
src/chakra/core/: chakra_logger.py  domain_registry.py  domain_strategy.py  exceptions.py  execution_engine.py  interfaces.py  lifecycle.py  tracker.py  utils.py
src/chakra/domains/hndsr_vr/: __init__.py  dataset.py  domain.yaml  evaluate_runner.py  export_samples.py  lifecycle.py  metrics.py  models.py  notebook_contract.py  train_runner.py  utils.py
src/chakra/domains/nlp_lm/: __init__.py  dataset.py  domain.yaml  evaluate_runner.py  lifecycle.py  metrics.py  train_runner.py
src/chakra/domains/tabular_cls/: __init__.py  dataset.py  domain.yaml  evaluate_runner.py  lifecycle.py  models.py  train_runner.py  utils.py
src/chakra/hndsr_vr/: __init__.py  dataset.py  evaluate_runner.py  export_samples.py  lifecycle.py  metrics.py  models.py  notebook_contract.py  tracker.py  train_runner.py  utils.py
tests/: conftest.py  test_cli_dispatch.py  test_core.py  test_domain_registry.py  test_domain_strategy.py  test_execution_engine.py  test_execution_integration.py  test_execution_lifecycle.py  test_lifecycle_review.py  test_nlp_domain.py  test_notebook_contract.py  test_runtime_contract.py  test_tabular_domain.py
